--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -39,8 +39,7 @@
                   <a target='_blank'class="list-group-item" href="{{vm.profile.profileTWlink}}" target="_blank"><i class="zmdi zmdi-twitter" ></i></a></div>
 
                 <div style='margin: 5px;'ng-show='vm.profile.profileGHlink'>
-                  <a target='_blank'class="list-group-item" href="{{vm.profile.profileGHlink}}" target="_blank"><i class="zmdi zmdi-github" ></i></a></div><br>
-                  <script src="https://apis.google.com/js/platform.js" async defer></script>
+                  <a target='_blank'class="list-group-item" href="{{vm.profile.profileGHlink}}" target="_blank"><i class="zmdi zmdi-github" ></i></a></div><br><br>
                   <g:hangout
                      render="createhangout"
                      topic="cpp11"
@@ -48,6 +47,8 @@
                      invites="[{ id : '103757504279751950811', invite_type : 'PROFILE' },
                          { id : 'pearlmcphee@gmail.com', invite_type : 'EMAIL' }]">
                   </g:hangout>
+                  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
              </div>
             </div>
             </div>
