--- a/public/views/messagecenter.html
+++ b/public/views/messagecenter.html
@@ -1,4 +1,5 @@
 <div ng-controller="ProfileController as vm">
+  {{vm.profile}}
   <md-content>
       <md-tabs class="md-primary" md-dynamic-height md-border-bottom >
         <md-tab style="text-align:center; color:#32B2B2 margin:auto" label="inbox ({{vm.profile.inmessage.length}})">
