fixed load page layout

--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -26,5 +26,7 @@
       <!-- by clicking cancel can this go back to previous state? or home  -->
     </div>
   </form>
-</divs>
+</div>
+<footer style="text-align:center">&copy Phoja Unlimited LLC</footer>
+
 </div>
