--- a/public/views/createforumPost.html
+++ b/public/views/createforumPost.html
@@ -29,5 +29,6 @@
             <md-button type="button" class="md-flat" ui-sref="Forums">Cancel</md-button>
           </div>
     </form>
+    <footer style="text-align:center">&copy Phoja Unlimited LLC</footer>
 
 </div>
