--- a/public/views/editfpost.html
+++ b/public/views/editfpost.html
@@ -27,5 +27,6 @@
             <md-button type="button" class="md-flat" ng-click="vm.cancelEdit();"> Cancel</md-button>
           </div>
     </form>
+    <footer style="text-align:center">&copy Phoja Unlimited LLC</footer>
 
 </div>
