--- a/public/views/followers.html
+++ b/public/views/followers.html
@@ -3,4 +3,6 @@
   <div ng-repeat="p in vm.profile.followers">
     <md-button class="md-flat">{{p.followerName | firstLetterFilter}}</md-button>
   </div>
+  <footer style="text-align:center">&copy Phoja Unlimited LLC</footer>
+
 </div>
