--- a/public/views/forgot.html
+++ b/public/views/forgot.html
@@ -16,3 +16,4 @@
 		<button type="submit" ng-disabled="!nav.user.email || !nav.user.confirmEmail">Submit</button>
 	</div>
 </form>
+<footer style="text-align:center">&copy Phoja Unlimited LLC</footer>
