--- a/public/views/forumPost.html
+++ b/public/views/forumPost.html
@@ -25,4 +25,6 @@
   <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
 </div>
 </div>
+<footer style="text-align:center">&copy Phoja Unlimited LLC</footer>
+
 </div>
