--- a/public/views/home.html
+++ b/public/views/home.html
@@ -145,5 +145,6 @@
     <md-divider ng-if="!$last"></md-divider>
 
         </div>
+        <footer style="text-align:center;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
 
           </div>
