--- a/public/views/message.html
+++ b/public/views/message.html
@@ -7,4 +7,5 @@
     </md-input-container>
     <md-button type="submit" ng-click="vm.primary()" ui-sref="Home">Send</md-button>
   </form>
+  <footer style="text-align:center;color:white;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
 </div>
