--- a/public/views/messagecenter.html
+++ b/public/views/messagecenter.html
@@ -28,4 +28,5 @@
         </md-tab>
       </md-tabs>
     </md-content>
+    <footer style="text-align:center;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
 </div>
