--- a/public/views/passwordReset.html
+++ b/public/views/passwordReset.html
@@ -17,3 +17,4 @@
 		<button type="submit" ng-disabled="!nav.user.password || !nav.user.confirmPass">Submit</button>
 	</div>
 </form>
+<footer style="text-align:center;color:white;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
