--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -159,4 +159,6 @@
           <md-button type='submit' class='md-flat' > Edit </md-button>
           <md-button type='button' class='md-flat' ng-click = "showEdit = false;"> Cancel </md-button>
       </form>
+
+      <footer style="text-align:center;color:white;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
 </div>
