--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -87,5 +87,5 @@
       </center>
     </content>
   </div>
-
+<footer style="text-align:center;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
 </div>
