--- a/public/views/tag.html
+++ b/public/views/tag.html
@@ -5,4 +5,5 @@
     <h3>{{t.title}}</h3>
     <h4>{{t.body}}</h4>
   </div>
+  <footer style="text-align:center;color:white;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
 </div>
