--- a/public/views/terms.html
+++ b/public/views/terms.html
@@ -52,3 +52,4 @@ A. If any provision of these Terms and Conditions is held to be invalid or unenf
 
 <p>B. No Joint Venture, No Derogation of Rights. You agree that no joint venture, partnership, employment, or agency relationship exists between you and us as a result of these Terms and Conditions or your use of the Site. Our performance of these Terms and Conditions is subject to existing laws and legal process, and nothing contained herein is in derogation of our right to comply with governmental, court and law enforcement requests or requirements relating to your use of the Site or information provided to or gathered by us with respect to such use.</p>
 </div>
+<footer style="text-align:center;color:white;margin-bottom:-40px;">&copy Phoja Unlimited LLC</footer>
